scrollbar fix for events

--- a/game.css
+++ b/game.css
@@ -111,6 +111,7 @@ body {
 
 .current-events,
 .history-list {
+  overflow-x: hidden;
   overflow-y: auto;
   min-height: 0;
   flex-grow: 1;
